# email_automation_pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: defaults.yaml  secrets.example.env  verifiers.yaml
planning/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  outreach-bot-design-and-plan.md
planning/reviews/: iteration-1-opus.md
planning/sections/: index.md  section-01-skeleton-and-config.md  section-02-lib-foundations.md  section-03-lib-observability.md  section-04-lib-llm-and-gmail.md  section-05-noop-and-orchestration.md  section-06-source-domains.md  section-07-discover-contacts.md  section-08-verifiers.md  section-09-verify-emails.md  section-10-compose-emails.md  section-11-send-emails.md  section-12-bounces-and-polish.md
playbooks/: 00-pipeline-overview.md  01-target-definition.md  02-domain-sourcing.md  03-contact-discovery.md  04-email-verification.md  05-email-composition.md  06-sending.md  07-tracking-followup.md
scripts/: compose_emails.py  discover_contacts.py  noop_stage.py  poll_bounces.py  run_pipeline.py  send_emails.py  setup_campaign.py  source_domains.py  status.py  verify_emails.py
templates/: _brief_template.yaml  _example.md  ai-agent-integration.md
tests/: conftest.py  test_compose_emails.py  test_discover_contacts.py  test_error_contract.py  test_noop_stage.py  test_poll_bounces.py  test_run_pipeline.py  test_send_emails.py  test_skeleton.py  test_source_domains.py  test_status.py  test_verify_emails.py
(+43 files in other folders)
